--- a/miniprojet_cadenas_LIGNON Ronan/src/Interface/interface_cadenas.form
+++ b/miniprojet_cadenas_LIGNON Ronan/src/Interface/interface_cadenas.form
@@ -331,6 +331,9 @@
       <Properties>
         <Property name="text" type="java.lang.String" value="Recommencer"/>
       </Properties>
+      <Events>
+        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="bouton_recommencerActionPerformed"/>
+      </Events>
       <Constraints>
         <Constraint layoutClass="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout" value="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout$AbsoluteConstraintsDescription">
           <AbsoluteConstraints x="360" y="340" width="-1" height="40"/>
